# python-tooling-enterpy2021

./: .copier-answers.yml  .env.sample  .gitignore  Dockerfile  README.md  coverage.ini  mkdocs.yml  mypy.ini  pyproject.toml  tasks.py
docs/: gen_api_doc.py  index.md
python_tooling_enterpy_2021/: __init__.py  app.py  branch_coverage.py  main.py  settings_decouple.py  settings_dotenv.py
tests/python_tooling_enterpy_2021/: app_test.py  branch_test.py  main_test.py  settings_test.py
tools/: post-commit.bat  post-commit.sh  pre-commit.bat  pre-commit.py  pre-commit.sh
